--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Build Docker Compose
         run: docker compose up --build --no-start # Builds images, but doesn't start containers
         env:
+          NODE_ENV: production
           SERVER_SERVICE_PORT: ${{ secrets.SERVER_SERVICE_PORT }}
           WEB_CLIENT_PORT: ${{ secrets.WEB_CLIENT_PORT }}
           MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
