--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: List files in server directory
+        run: ls -la packages/server
+
       - name: Set up Docker Compose
         uses: docker/setup-buildx-action@v2 # Necessary for docker compose v2
 
