--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -9,28 +9,37 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      NODE_ENV: production
+      SERVER_SERVICE_PORT: ${{ secrets.SERVER_SERVICE_PORT }}
+      WEB_CLIENT_PORT: ${{ secrets.WEB_CLIENT_PORT }}
+      MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
+      MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
+      MYSQL_HOST: ${{ secrets.MYSQL_HOST }}
+      DB_PORT: ${{ secrets.DB_PORT }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
           submodules: true
 
-      - name: List files in server directory
-        run: ls -la packages/server
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
 
-      - name: Set up Docker Compose
-        uses: docker/setup-buildx-action@v2 # Necessary for docker compose v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-      - name: Build Docker Compose
-        run: docker compose up --build --no-start # Builds images, but doesn't start containers
-        env:
-          NODE_ENV: production
-          SERVER_SERVICE_PORT: ${{ secrets.SERVER_SERVICE_PORT }}
-          WEB_CLIENT_PORT: ${{ secrets.WEB_CLIENT_PORT }}
-          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
-          MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
-          MYSQL_HOST: ${{ secrets.MYSQL_HOST }}
-          DB_PORT: ${{ secrets.DB_PORT }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Check Docker Images
-        run: docker images # Optional, to verify images were built
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}${{ github.repository }}:latest
