--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -64,8 +64,19 @@ jobs:
           passphrase: ${{ secrets.SSH_PASSPHRASE }} # Optional, only if you have a passphrase for your SSH key
           port: 22                                # The port for SSH (default is 22)
           script: |
-            pwd
-            ls
+            cd ~/portfolio_XP_monorepo || exit
+
+            # Pull the latest changes from GitHub (make sure the VPS has Git installed)
+            git pull --recurse-submodules
+
+            # Stop and remove the existing containers
+            docker-compose down
+
+            # Start the containers (this will recreate them if any changes are detected)
+            docker-compose up -d
+
+            # Optionally, remove unused Docker images to save space
+            docker system prune -f
 
       # - name: Login to GitHub Container Registry
       #   uses: docker/login-action@v3
