--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,11 @@ services:
     depends_on:
       - databaseXp
     environment:
-      MYSQL_HOST: databaseXp
-      PORT: $SERVER_SERVICE_PORT
+      SERVER_SERVICE_PORT: ${SERVER_SERVICE_PORT}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_HOST: ${MYSQL_HOST}
+      DB_PORT: ${DB_PORT}
     ports:
       - ${SERVER_SERVICE_PORT}:${SERVER_SERVICE_PORT}
     volumes:
@@ -22,8 +25,6 @@ services:
     restart: always
     depends_on:
       - server
-    environment:
-      PORT: $WEB_CLIENT_PORT
     ports:
       - ${WEB_CLIENT_PORT}:${WEB_CLIENT_PORT}
     volumes:
@@ -35,6 +36,11 @@ services:
   databaseXp:
     image: mysql
     restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_HOST: ${MYSQL_HOST}
+      DB_PORT: ${DB_PORT}
     ports:
       - ${DB_PORT}:${DB_PORT}
     volumes:
