--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,40 +19,28 @@ jobs:
       DB_PORT: ${{ secrets.DB_PORT }}
 
     steps:
-      # - name: Checkout repository
-      #   uses: actions/checkout@v3
-      #   with:
-      #     submodules: true
-
-      # - name: Set up SSH key
-      #   run: |
-      #     mkdir -p ~/.ssh
-      #     echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
-      #     chmod 600 ~/.ssh/id_rsa
-
-      #     eval "$(ssh-agent -s)"
-
-      #     echo "${{ secrets.SSH_PASSPHRASE }}" | ssh-add ~/.ssh/id_rsa
-
-      #     ssh-keyscan -H ${{ secrets.SSH_IP }} >> ~/.ssh/known_hosts
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          submodules: true
           
-      # - name: Install Docker Compose (if not already present)
-      #   run: |
-      #     if ! command -v docker-compose &> /dev/null
-      #     then
-      #       echo "Docker Compose not found, installing..."
-      #       sudo apt-get update
-      #       sudo apt-get install -y docker-compose
-      #       docker-compose --version
-      #     else
-      #       echo "Docker Compose already installed."
-      #       docker-compose --version
-      #     fi
-      #     docker --version # Verify Docker is available (should be)
+      - name: Install Docker Compose (if not already present)
+        run: |
+          if ! command -v docker-compose &> /dev/null
+          then
+            echo "Docker Compose not found, installing..."
+            sudo apt-get update
+            sudo apt-get install -y docker-compose
+            docker-compose --version
+          else
+            echo "Docker Compose already installed."
+            docker-compose --version
+          fi
+          docker --version # Verify Docker is available (should be)
       
-      # - name: Build Docker images locally to verify
-      #   run: |
-      #     docker-compose build
+      - name: Build Docker images locally to verify
+        run: |
+          docker-compose build
 
 
       - name: SSH into VPS and deploy using appleboy/ssh-action
