--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     depends_on:
       - databaseXp
     environment:
+      NODE_ENV: ${NODE_ENV}
       SERVER_SERVICE_PORT: ${SERVER_SERVICE_PORT}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
