--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
     networks:
       - shared-network
     command: npm run dev
+    environment:
+      - REACT_APP_API_URL=http://server:8080/
   databaseXp:
     image: mysql
     restart: always
