--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       - shared-network
     command: npm run dev
     extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - "host.docker.internal:172.17.0.1"
     environment:
       - VITE_API_URL=http://host.docker.internal:${SERVER_SERVICE_PORT}
   databaseXp:
