--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - shared-network
     command: npm run dev
     environment:
-      - VITE_API_URL=http://93.127.213.247/:${SERVER_SERVICE_PORT}
+      - VITE_API_URL=http://93.127.213.247:${SERVER_SERVICE_PORT}
   databaseXp:
     image: mysql
     restart: always
