--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -17,10 +17,7 @@ http {
     # Hide Nginx version
     server_tokens off;
 
-    # Define where your app containers are (using Docker service names)
-    upstream client_app {
-        server client:${WEB_CLIENT_PORT}; # e.g., client:5173
-    }
+
 
     upstream server_api {
         server server:${SERVER_SERVICE_PORT}; # e.g., server:3000
@@ -48,18 +45,9 @@ http {
 
         # Route all other requests (/, /about, etc.) to the frontend React server
         location / {
-            proxy_pass http://client_app; # Forward the request
-
-            # --- Essential Headers for Frontend (especially dev server) ---
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-
-            # --- Headers needed for Vite HMR (WebSockets) ---
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
+            root /usr/share/nginx/html;
+            index index.html index.htm;
+            try_files $uri $uri/ /index.html; # For SPA routing
         }
     }
 }
