--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -12,7 +12,6 @@ jobs:
     env:
       NODE_ENV: production
       SERVER_SERVICE_PORT: ${{ secrets.SERVER_SERVICE_PORT }}
-      WEB_CLIENT_PORT: ${{ secrets.WEB_CLIENT_PORT }}
       MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
       MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
       MYSQL_HOST: ${{ secrets.MYSQL_HOST }}
@@ -59,17 +58,17 @@ jobs:
 
             echo "NODE_ENV=production" > .env
             echo "SERVER_SERVICE_PORT=${{ secrets.SERVER_SERVICE_PORT }}" >> .env
-            echo "WEB_CLIENT_PORT=${{ secrets.WEB_CLIENT_PORT }}" >> .env
             echo "MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}" >> .env
             echo "MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }}" >> .env
             echo "MYSQL_HOST=${{ secrets.MYSQL_HOST }}" >> .env
             echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
+            echo "DOMAIN_NAME=${{ secrets.DOMAIN_NAME }}" >> .env
 
             # Stop and remove the existing containers
             docker-compose down
 
             # Start the containers (this will recreate them if any changes are detected)
-            docker-compose up -d
+            # docker-compose up -d
 
             # Optionally, remove unused Docker images to save space
-            docker system prune -f
+            # docker system prune -f
