--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -26,7 +26,7 @@ http {
     # The main configuration for your site
     server {
         listen 80;
-        listen [::]:80
+        listen [::]:80;
         server_name ${DOMAIN_NAME} www.${DOMAIN_NAME};
 
         location /.well-known/acme-challenge/ {
