--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -68,7 +68,8 @@ jobs:
             docker-compose down
 
             # Start the containers (this will recreate them if any changes are detected)
-            docker-compose up --build --force-recreate --no-cache -d
+            docker-compose build --no-cache
+            docker-compose up --force-recreate -d
 
             # Optionally, remove unused Docker images to save space
             docker system prune -f
