--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,24 +22,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
-          
-      # - name: Install Docker Compose (if not already present)
-      #   run: |
-      #     if ! command -v docker-compose &> /dev/null
-      #     then
-      #       echo "Docker Compose not found, installing..."
-      #       sudo apt-get update
-      #       sudo apt-get install -y docker-compose
-      #       docker-compose --version
-      #     else
-      #       echo "Docker Compose already installed."
-      #       docker-compose --version
-      #     fi
-      #     docker --version # Verify Docker is available (should be)
-      
-      # - name: Build Docker images locally to verify
-      #   run: |
-      #     docker-compose build
 
 
       - name: SSH into VPS and deploy using appleboy/ssh-action
@@ -72,4 +54,5 @@ jobs:
             docker-compose up --force-recreate -d
 
             # Optionally, remove unused Docker images to save space
-            docker system prune -f
+            # prune on hold while sharing same vps with other docker project
+            # docker system prune -f 
