--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,10 +62,16 @@ services:
     volumes:
       - certbot_certs:/etc/letsencrypt
       - certbot_webroot:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --deploy-hook \"nginx -s reload\" || true; sleep 12h & wait $${!}; done;'"
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --deploy-hook \"nginx -s reload\"; sleep 12h & wait $${!}; done;'"
     network_mode: "service:nginx"
+    restart: unless-stopped
     depends_on:
       - nginx
+    healthcheck:
+      test: ["CMD", "certbot", "certificates"]
+      interval: 24h
+      timeout: 10s
+      retries: 3
 networks:
   shared-network:
     driver: bridge
